# job_search

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  job_radar.db  pyproject.toml  test_job_radar.db
app/: __init__.py  main.py  models.py  schemas.py
app/api/: routes.py
app/core/: config.py
app/db/: base.py  session.py
app/graph/: workflow.py
app/radar/: README.md  __init__.py  __main__.py  classify.py  dedupe.py  discovery.py  models.py  normalize.py  profiles.py  validity.py
app/radar/connectors/: __init__.py  base.py  greenhouse.py  lever.py  sample.py  tavily.py
app/services/: extraction.py  scoring.py  text.py
docs/: v0-backend.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
samples/: candidate_profile.json  direct_product_job.txt  staffing_job.txt
tests/: test_api.py  test_radar.py  test_scoring.py  test_workflow.py
tests/fixtures/: romina_irrelevant_results.json
