[project]
name = "job-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.138.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "langgraph-cli[inmem]>=0.4.30",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
